Bug 320799.  Fix client* and scroll* for comboboxes to not consider the dropdown's scrollable area.  r=roc